--- a/package.json
+++ b/package.json
@@ -1,40 +1,12 @@
 {
-  "name": "award",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "awr",
+  "version": "0.1.7",
   "scripts": {
-    "dev": "nodemon server/server.js",
-    "build": "next build",
-    "start": "cross-env NODE_ENV=production nodemon server/server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "jss": "latest",
-    "material-ui": "next",
-    "mobx": "3.5.1",
-    "mobx-react": "^4.4.2",
-    "mobx-state-tree": "1.3.1",
-    "next": "^5.0.0",
-    "nprogress": "^0.2.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-jss": "latest",
-    "styled-components": "^2.1.0"
+    "dev": "cd packages/awr-app && npm run dev",
+    "build": "lerna run build",
+    "start": "cd packages/awr-app && npm run start"
   },
   "devDependencies": {
-    "babel-plugin-module-resolver": "^3.1.0",
-    "babel-plugin-styled-components": "^1.1.5",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "cross-env": "^5.1.3",
-    "eslint": "^4.18.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-import-resolver-babel-module": "^4.0.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "nodemon": "1.15.1"
+    "lerna": "^2.9.0"
   }
 }
