fix vscode alias, lerna upd, dep upd

--- a/packages/awr-app/jsconfig.json
+++ b/packages/awr-app/jsconfig.json
@@ -1,5 +1,14 @@
 {
   "compilerOptions": {
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "baseUrl": ".",
+    "paths": {
+      "components/*": ["./components/*"],
+      "decorators/*": ["./core/decorators/*"],
+      "services/*": ["./core/services/*"],
+      "utils/*": ["./core/utils/*"],
+      "theme/*": ["./core/theme/*"],
+      "store/*": ["./store/*"]
+    }
   }
 }
