--- a/packages/awr-app/.eslintrc
+++ b/packages/awr-app/.eslintrc
@@ -1,3 +1,8 @@
 {
-  "extends": ["prettier"]
+  "extends": ["react-app", "prettier"],
+  "settings": {
+    "import/resolver": {
+      "babel-module": {}
+    }
+  }
 }
