--- a/packages/awr-app/package.json
+++ b/packages/awr-app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon server/server.js",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production nodemon server/server.js"
+    "start": "cross-env NODE_ENV=production node server/server.js"
   },
   "keywords": [],
   "author": "",
