--- a/packages/awr-app/.babelrc
+++ b/packages/awr-app/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["next/babel"],
+  "presets": ["next/babel", "react", "react-optimize"],
   "plugins": [
     "transform-decorators-legacy",
     [
