--- a/packages/awr-app/package.json
+++ b/packages/awr-app/package.json
@@ -18,6 +18,7 @@
     "final-form": "^4.2.1",
     "jss": "latest",
     "material-ui": "next",
+    "material-ui-icons": "^1.0.0-beta.35",
     "mobx": "3.5.1",
     "mobx-react": "^4.4.2",
     "mobx-state-tree": "1.3.1",
@@ -27,6 +28,7 @@
     "react-dom": "^16.2.0",
     "react-final-form": "^3.1.0",
     "react-jss": "latest",
+    "react-swipeable-views": "^0.12.13",
     "styled-components": "^2.1.0"
   },
   "devDependencies": {
