--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "cd packages/awr-app && npm run start"
   },
   "devDependencies": {
-    "lerna": "^3.0.0-alpha.1"
-  },
-  "dependencies": {}
+    "lerna": "^2.9.0"
+  }
 }
