--- a/packages/awr-app/package.json
+++ b/packages/awr-app/package.json
@@ -17,7 +17,7 @@
     "awr-validation": "^1.0",
     "final-form": "^4.2.1",
     "jss": "latest",
-    "material-ui": "next",
+    "material-ui": "^1.0.0-beta.35",
     "material-ui-icons": "^1.0.0-beta.35",
     "mobx": "3.5.1",
     "mobx-react": "^4.4.2",
@@ -28,6 +28,7 @@
     "react-dom": "^16.2.0",
     "react-final-form": "^3.1.0",
     "react-jss": "latest",
+    "react-popper": "^0.8.2",
     "react-swipeable-views": "^0.12.13",
     "styled-components": "^2.1.0"
   },
