--- a/packages/awr-app/package.json
+++ b/packages/awr-app/package.json
@@ -24,6 +24,7 @@
     "mobx-state-tree": "1.3.1",
     "next": "^5.0.0",
     "nprogress": "^0.2.0",
+    "rc-progress": "^2.2.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-final-form": "^3.1.0",
