--- a/packages/awr-app/package.json
+++ b/packages/awr-app/package.json
@@ -17,37 +17,37 @@
     "awr-validation": "^1.0",
     "final-form": "^4.2.1",
     "jss": "latest",
-    "material-ui": "^1.0.0-beta.35",
-    "material-ui-icons": "^1.0.0-beta.35",
-    "mobx": "3.5.1",
+    "material-ui": "next",
+    "material-ui-icons": "latest",
+    "mobx": "3.6.1",
     "mobx-react": "^4.4.2",
     "mobx-state-tree": "1.3.1",
     "next": "^5.0.0",
     "nprogress": "^0.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-final-form": "^3.1.0",
+    "react-final-form": "^3.1.2",
     "react-jss": "latest",
     "react-popper": "^0.8.2",
     "react-swipeable-views": "^0.12.13",
-    "styled-components": "^2.1.0"
+    "styled-components": "^3.2.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.2.2",
     "babel-plugin-module-resolver": "^3.1.0",
-    "babel-plugin-styled-components": "^1.1.5",
+    "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "cross-env": "^5.1.3",
-    "eslint": "^4.1.1",
+    "eslint": "^4.18.2",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-import-resolver-babel-module": "^4.0.0",
-    "eslint-plugin-flowtype": "^2.34.1",
-    "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-flowtype": "^2.46.1",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.1.0",
-    "nodemon": "1.15.1",
-    "prettier": "^1.11.0"
+    "eslint-plugin-react": "^7.7.0",
+    "nodemon": "1.17.1",
+    "prettier": "^1.11.1"
   }
 }
