--- a/packages/awr-components/package.json
+++ b/packages/awr-components/package.json
@@ -3,5 +3,50 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {}
+  "scripts": {
+    "awr-components: dev": "webpack-dev-server --mode development --open ",
+    "awr-components: prod": "cross-env NODE_ENV=production webpack --mode production ",
+    "awr-components: build": "webpack"
+  },
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "prop-types": "^15.6.1",
+    "react-router-dom": "^4.2.2",
+    "material-ui": "next",
+    "material-ui-icons": "latest",
+    "mdi-react":"latest",
+    "styled-components": "latest",
+    "jss": "^9.8.0",
+    "react-jss": "^8.3.3",
+    "typeface-roboto": "latest"
+  },
+  "devDependencies": {
+    "cross-env": "^5.1.4",
+    "babel-eslint": "^8.2.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
+    "style-loader": "^0.20.3",
+    "css-loader": "^0.28.10",
+    "react-hot-loader": "^4.0.0",
+    "html-webpack-plugin": "^3.0.6",
+    "clean-webpack-plugin": "^0.1.19",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "webpack-merge": "^4.1.2",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11",
+    "webpack-dev-server": "^3.1.1"
+  }
 }
