--- a/packages/awr-app/.eslintrc
+++ b/packages/awr-app/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["airbnb", "prettier"],
+  "extends": ["react-app", "prettier"],
   "settings": {
     "import/resolver": {
       "babel-module": {}
