--- a/packages/awr-app/package.json
+++ b/packages/awr-app/package.json
@@ -25,6 +25,7 @@
     "mobx-state-tree": "1.3.1",
     "next": "^5.0.0",
     "nprogress": "^0.2.0",
+    "prop-types": "^15.6.1",
     "rc-progress": "^2.2.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
